--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -25,7 +25,7 @@
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770327.md#1" target="_blank">北大学者揭大陆股市真相：70%散户赔钱</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770327.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/02/1602201826042403-150x120.jpg" align ="left"></a>近日有大陆学者表示，大大陆的资本市场不是一个真正的投资市场，只是一个融资市场，大陆散户股民并没有赚到钱，其中有70%散户都亏损。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 5:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770899.md#1" target="_blank">大陆又一平台爆雷 涉资千亿 近二百万人受害</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770899.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/IMG_5395-150x120.jpg" align ="left"></a>近来，大陆普顿PTFX外汇平台崩盘的消息，震动了整个外汇圈。据悉，该平台涉及资金近千亿人民币，200多万投资者。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 5:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank">受降雪影响 大陆131条高速135个路段封闭</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771337.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191956262-150x120.jpg" align ="left"></a>1月6日，因降雪影响，大陆131条高速135个路段封闭，波及北京、天津、河北、山西、陕西、内蒙古。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 4:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank">武汉不明肺炎延烧 泰国菲律宾加强检测旅客</a><br></h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11771579.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_HKG2003122958048-150x120.jpg" align ="left"></a>武汉不明肺炎疫情持续扩散，为此亚洲各国均采取因应措施。泰国疾病管制局和泰国机场公司合作在机场加装红外线温度扫描机，并加强对来自中国武汉的旅客检查措施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11773543.md#1" target="_blank">前河南政法委书记吴天君之子获刑二年</a><br></h3>中共河南省前政法委书记吴天君在获刑两年多后，其子吴建业因受贿罪，在2019年11月7日被判处有期徒刑2年，缓刑3年，并处罚金20万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772269.md#1" target="_blank">被埋37天 广州地陷埋3人仅搜出1人遗体</a><br></h3>1月6日，广东广州地铁施工区上月塌陷的地方，搜寻人员找寻到一具失踪人员遗体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11770883.md#1" target="_blank">【翻墙必看】分析：王志民突然被撤职内幕</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
