--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kuujke2745/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kuujke2745/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775492.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/d5b096ded397c334358d1b504dec5ed9-320x200.jpg">遇资本寒冬 2019大陆336家新创公司关停</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777394.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/11/15d95db2d66a2a72_ttl7dayoHq_003-320x200.jpg">【直播】伊朗袭美军基地 川普发表讲话</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
@@ -30,7 +30,6 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/kuujke2745/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11777394.md#1">【直播预告】伊朗袭击美军 川普发表讲话</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776033.md#1">蔡英文竞选广告对比港台 触动人心网络广传</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/6/n11772761.md#1">围绕习在修例事件中的责任 两种声音针锋相对</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776943.md#1">林郑政府日子难熬 新上任区议员拒配合</a><br>
@@ -39,6 +38,7 @@
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776677.md#1">香港疑似武汉不明肺炎个案增至38宗</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776528.md#1">导弹袭击 班机坠毁 地震 同日发生在伊朗</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11776605.md#1">中国传媒大学前副校长被双开 曾被指性侵女生</a><br>
+<a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775492.md#1">遇资本寒冬 2019大陆336家新创公司关停</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11775729.md#1">【拍案惊奇】伊朗开火战云起 伊拉克难玩平衡</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/7/n11775580.md#1">蓬佩奥回应中联办换人 “北京应履行承诺”</a><br>
 <a href="https://github.com/kuujke2745/djy/blob/master/gb/20/1/8/n11775929.md#1">王志民被撤换 分析：内部或突发意外事件</a><br>
